--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ worker-macros = { version = "0.3.3", features = ['http'] }
 axum = { version = "0.7", default-features = false }
 tower-service = "0.3.2"
 console_error_panic_hook = { version = "0.1.1" }
+js-sys = "0.3.69"
