--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ worker = { version = "0.3.3", features = ['http', 'axum'] }
 worker-macros = { version = "0.3.3", features = ['http'] }
 axum = { version = "0.7", default-features = false }
 tower-service = "0.3.2"
+wasm-bindgen = "=0.2.92"
 console_error_panic_hook = { version = "0.1.1" }
-js-sys = "0.3.69"
