--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
-worker = { version = "0.3.3", features = ['http', 'axum'] }
+worker = { version = "=0.3.2", features = ['http', 'axum'] }
 worker-macros = { version = "0.3.3", features = ['http'] }
 axum = { version = "0.7", default-features = false }
 tower-service = "0.3.2"
